<resources>
    <string name="app_name">MI Clone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="step">Steps</string>
    <string name="cal">cal</string>
    <string name="burned">Burned</string>
    <string name="metre">m</string>
    <string name="distance">Distance</string>
    <string name="bluetooth_not_connected">Bluetooth Not Connected</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="step_goals">Step Goals</string>
    <string name="steps">steps</string>
    <string name="value_of_goal">1000</string>
    <string name="update">Update</string>
</resources>